--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.8.2",
     "git": "^0.1.5",
     "pinia": "^3.0.1",
+    "swiper": "^11.2.5",
     "tailwindcss": "^4.0.12",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
